# huginn

./: .env.example  .gitignore  README.md  SPEC.md  calendar.example.json  config.example.toml  pyproject.toml
briefing/: __init__.py  actions.py  cli.py  config.py  core.py  db.py  discord_bot.py  discord_webhook.py  intent.py  memory.py
briefing/llm/: __init__.py  base.py  null.py  openai_compat.py  parse.py  prompt.py
briefing/render/: __init__.py  discord.py  discord_embed.py  text.py
briefing/sections/: __init__.py  base.py  calendar.py  ping.py  rss.py  weather.py
briefing/utils/: article.py  hashing.py  logging.py  net.py  time.py
personas/: default.md  example-terse.md
systemd/: README.md  briefing-bot.service  briefing-daily.timer  briefing-local.timer  briefing-music.timer  briefing-tech.timer  briefing-weekend.timer  briefing@.service
tests/: test_actions.py  test_calendar.py  test_cli.py  test_config.py  test_discord_bot.py  test_discord_embed.py  test_discord_webhook.py  test_intent.py  test_llm_chat.py  test_llm_parse.py  test_llm_rss.py  test_memory.py  test_persona.py  test_render.py  test_rss.py  test_selection.py  test_weather.py
