[project]
name = "morning-briefing-bot"
version = "0.1.0"
description = "Local-first Discord morning briefing bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4,<3",
  "feedparser>=6.0,<7",
  "httpx>=0.27,<1",
  "icalendar>=5.0,<7",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
briefing = "briefing.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["briefing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
